@@ -19,10 +19,10 @@ jobs:
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
 
       - name: "Install tools"
-        uses: DeLaGuardo/setup-clojure@12.5
+        uses: DeLaGuardo/setup-clojure@13.1
         with:
-          cljstyle: 0.16.626
-          clj-kondo: 2024.09.27
+          cljstyle: 0.17.642
+          clj-kondo: 2024.11.14
 
       - name: "Lint Clojure"
         run: clj-kondo --lint deps.edn --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
